<resources>
    <string name="app_name">TimeSync</string>
    <string name="welcome_title">My Fellow</string>
    <string name="welcome_subtitle">Best Way To Invest Your Time!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget Password ?</string>
    <string name="new_user">I\'m a new user.</string>
    <string name="already_user">I\'m already a user.</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="create_password">Create a password</string>
    <string name="app_logo">App Logo</string>
    <string name="virtual_assistant">Virtual Assistant</string>
</resources>